# EPIC-UI

./: CMakeLists.txt  EPIC-UI-Github  EPIC-UI-Github.pub  README.md  corsika_input.cpp  corsika_input.h  corsika_input.ui  corsika_template.inp  corsika_template.steer  epic_ui  epic_ui.pub  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  submit_corsika_jobs.sh
Installer/: build_installer.sh
Installer/config/: config.xml
